Resolves: tdf#114675 return new EditPaM of insert position from SvxReadXML()

Change-Id: I77027d74a0addaafaf19e2c2a8e9759d560951eb
(cherry picked from commit a44e62b82c7598471da9a5254953067613806337)
Reviewed-on: https://gerrit.libreoffice.org/50646
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>